--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -94,13 +94,6 @@
                 <h2 class="page-header">TheCodas</h2>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="https://github.com/efeelaiho/TheCodas">
-                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-Light-64px.png' %}" alt="GitHub Repo" height="50" width="50">
-            </div>
-
-            <hr>
-
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
@@ -136,6 +129,14 @@
 
                 <p>Mark is a former Marine pursuing a bachelor's degree in computer science. Interests include scuba and history.</p>
 
+            </div>
+        </div>
+
+        <hr>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="https://github.com/efeelaiho/TheCodas">
+                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-Light-64px.png' %}" alt="GitHub Repo" height="50" width="50">
             </div>
         </div>
 
