--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -134,7 +134,7 @@
 
         <hr>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                 <a href="https://github.com/efeelaiho/TheCodas">
                     <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
