--- a/vmax_src/templates/kanyewest.html
+++ b/vmax_src/templates/kanyewest.html
@@ -81,11 +81,14 @@
         </div>
 
         
+        <h2>Biography: </h2>
+            <p>
+                <img  src="{% static 'img/artist/kanye_page.jpg' %}" alt=""  style="float: left; margin: 0px 20px 10px 0px;"> 
 
+                In the span of three short years, Kanye West went from hip-hop beatmaker to worldwide hitmaker, as his stellar production work for Jay-Z led to a major-label recording contract and, ultimately, a wildly successful solo career. West paired his beats with tongue-twisting raps and a self-assured, flamboyant personality. His dapper fashion sense set him apart from many of his rap peers, and his confidence often came across as boastful or even egotistical, albeit amusingly so. This flamboyance, of course, made for good press, something that West enjoyed in spades during his sudden rise to celebrity status. He was a media darling, appearing and performing at countless awards shows (and winning at them, too), delivering theatrical videos to MTV, and mouthing off about whatever happened to cross his mind. He frequently spoke out against the rampant homophobia evident in much rap music, posed for the cover of Rolling Stone as Jesus Christ, and even claimed during a televised Hurricane Katrina fundraiser that "George Bush doesn't care about black people." West courted controversy, no question about it, but his steady presence in the celebrity limelight couldn't eclipse his musical talent. His production abilities seemed boundless during his initial surge of activity, as he not only racked up impressive hits for himself (including "Jesus Walks" and "Gold Digger"), but also collaborated on smash hits with the likes of Jay-Z and Ludacris. As his career progressed throughout the early 21st century, West shattered certain stereotypes about rappers, becoming a superstar on his own terms without adapting his appearance, his rhetoric, or his music to fit any one musical mold.
+            </p>
 
         
-        <!-- photo -->
-       <img src="{% static 'img/artist/kanye_page.jpg' %}" alt=""> 
 
        <hr>
 
