--- a/vmax_src/templates/michael.html
+++ b/vmax_src/templates/michael.html
@@ -82,13 +82,14 @@
         </div>
 
         
+        <h2>Biography: </h2>
+            <p>
+                <img  src="{% static 'img/artist/michael_page.jpg' %}" alt=""  style="float: left; margin: 0px 20px 10px 0px;"> 
 
+                Michael Jackson was unquestionably the biggest pop star of the late 20th century, and certainly one of the most popular recording artists of all time. In his prime, Jackson was an unstoppable juggernaut, possessed of all the tools to dominate the charts seemingly at will: an instantly identifiable voice, eye-popping dance moves, stunning musical versatility, and loads of sheer star power. His 1982 blockbuster Thriller became the biggest-selling album of all time (probably his best-known accomplishment), and he was the first black artist to find stardom on MTV, breaking down innumerable boundaries both for his race and for music video as an art form. Yet as Jackson's career began, very gradually, to descend from the dizzying heights of his peak years, most of the media's attention focused on his increasingly bizarre eccentricities; he was often depicted as a man-child in a state of arrested development, completely sheltered from adult reality by a life spent in show business. The snickering turned to scandal in 1993, when Jackson was accused of molesting a 13-year-old boy; although he categorically denied the charges, his out-of-court settlement failed to restore his tarnished image. He never quite escaped the stigma of those allegations, and while he continued to sell records at superstar-like levels, he didn't release them with enough frequency (or, many critics thought, inspiration) to once again become better known for his music than his private life. Whether as a pop icon or a tabloid caricature, Jackson always remained bigger than life.
+            </p>
 
-        
-        <!-- photo -->
-       <img src="{% static 'img/artist/michael_page.jpg' %}" alt=""> 
-       
-
+     
        <hr>
 
 
