--- a/vmax_src/templates/college_drop_out.html
+++ b/vmax_src/templates/college_drop_out.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Albums</title>
+    <title>Encore</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -49,7 +49,9 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    
+                    <li>
+                        <a href="{% url 'home' %}"></a>
+                    </li>
                     <li>
                         <a  href="{% url 'about' %}">About</a>
                     </li>
@@ -73,92 +75,54 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Albums
+                <h1 class="page-header">The College Dropout
                 </h1>
             </div>
         </div>
-        <!-- /.row -->
 
-        <!-- Projects Row -->
+        
         <div class="row">
-            <div class="col-sm-3 portfolio-item">
-                <a href="{% url 'college' %}">
-                    <img class="img-responsive" src="{% static 'img/albums/college.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a  href="{% url 'college' %}">College Dropout</a>
-                </h3>
-                <p></p>
+
+            <div class="col-md-4">
+                <img src="{% static 'img/albums/albums_large/college_large.jpg' %}" alt="">
             </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="{% url 'bad' %}">
-                    <img class="img-responsive k" src="{% static 'img/albums/bad.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="{% url 'bad' %}">Bad</a>
-                </h3>
-            </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/channel.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="#">Channel Orange</a>
-                </h3>
-            </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="{% url 'encore' %}">
-                    <img class="img-responsive" src="{% static 'img/albums/encore.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="{% url 'encore' %}">Encore</a>
-                </h3>
+
+            <div class="col-md-4">
+                <h2>Editors' Notes</h2>
+                <p>In the early ‘00s, Kanye West gained notoriety as a producer-for-hire before The College Dropout shook hip-hop to its core. The mix of styles and subject matter is breathtaking. Pop hits rub up against vulnerable moments. Street anthems mingle with wild humor. And “Jesus Walks” challenges beliefs like no other rap song before it. In the hands of a lesser artist, The College Dropoout might have ended a career. Kanye West attacks the set with confidence and conviction—a beacon of things to follow.</p>
+                <h3>Track listing</h3>
+                <ol>
+                    <li> "Intro" </li>         
+                    <li> "We Don't Care"  </li>
+                    <li> "Graduation Day" </li>
+                    <li> "All Falls Down"  </li>
+                    <li> "I'll Fly Away" </li>
+                    <li> "Spaceship" </li>
+                    <li> "Jesus Walks" </li>
+                    <li> "Never Let Me Down" </li>
+                    <li> "Get Em High"   </li>
+                    <li> "Workout Plan"      </li>
+                    <li> "The New Workout Plan"    </li>
+                    <li>"Slow Jamz" </li>
+                    <li> "Breathe in Breathe Out"   </li>
+                    <li> "School Spirit" (Skit 1)   </li> 
+                    <li> "School Spirit" </li>
+                    <li> "School Spirit" (Skit 2)   </li>
+                    <li> "Lil Jimmy"  (Skit) </li>
+                    <li> "Two Words"    
+                    <li> "Through the Wire"  </li>    
+                    <li> "Family Business" </li>
+                    <li> "Last Call" </li>
+                </ol>
             </div>
 
         </div>
-        <!-- /.row -->
+        
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-sm-3 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/pimp_a_butterfly.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="#">To Pimp a Butterfly</a>
-                </h3>
-                <p></p>
-            </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/kind_of_blue.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="#">Kind of Blue</a>
-                </h3>
-            </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/louis_essential.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="#">Essential of Louis</a>
-                </h3>
-            </div>
-            <div class="col-sm-3 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/portraitinjazzgroot.jpg' %}" alt="">
-                </a>
-                <h3 class="albumname">
-                    <a href="#4">Portrait in Jazz</a>
-                </h3>
-            </div>
+       <hr>
 
-        </div>
 
-        <!-- /.row -->
 
-        <hr>
 
         <!-- Footer -->
         <footer>
