--- a/vmax_src/templates/bad.html
+++ b/vmax_src/templates/bad.html
@@ -81,14 +81,11 @@
         </div>
 
         
-        <div class="row">
 
-            <div class="col-md-4">
-                <img src="{% static 'img/albums/albums_large/bad_large.jpg' %}" alt="">
-            </div>
+                <img src="{% static 'img/albums/albums_large/bad_large.jpg' %}" alt="" align="middle">
+            
 
-            <div class="col-md-4">
-                <h2>Editors' Notes</h2>
+                <h2 align="middle">Editors' Notes</h2>
                 <p>After Thriller's unprecedented success, Michael Jackson had the impossible task of writing and recording a follow-up. Working under incredible pressure, Jackson expanded on the sonic challenges of Off the Wall and Thriller without losing the radio-ready grooves that had made him an international star. Bad starts with the playful and funky braggadocio of the title track and the upbeat thrill of "The Way You Make Me Feel." Yet "Man in the Mirror" pokes fun at Jackson's mythological status, while "I Just Can't Stop Loving You" delivers a power ballad with a brainwashing hook worthy of MJ's self-proclaimed (and justified) title of The King of Pop. The sound of the '80s is all over this record, with enhanced beats and funky synths that made it cutting-edge in 1987. "Just Good Friends" is a classy duet with Stevie Wonder. However, it's Jackson's fantasies—"Speed Demon," "Smooth Criminal," "Dirty Diana"—that push this album over the top.</p>
                 <h3>Track listing</h3>
                 <ol>
@@ -104,25 +101,11 @@
                     <li> "Smooth Criminal"      </li>
                     <li> "Leave Me Alone"   </li>
                 </ol>
-            </div>
-
-        </div>
+      
         
 
        <hr>
 
-            Title   Writer(s)   Length  
-1.  "Bad"       Jackson     4:07
-2.  "The Way You Make Me Feel"      Jackson     4:58
-3.  "Speed Demon"       Jackson     4:01
-4.  "Liberian Girl"     Jackson     3:53
-5.  "Just Good Friends" (featuring Stevie Wonder)   Terry Britten, Graham Lyle  4:05
-6.  "Another Part of Me"    Jackson     3:53
-7.  "Man in the Mirror"     Siedah Garrett, Glen Ballard    5:18
-8.  "I Just Can't Stop Loving You" (featuring Siedah Garrett)   Jackson     4:13
-9.  "Dirty Diana"       Jackson     4:41
-10.     "Smooth Criminal"       Jackson     4:16
-11.     "Leave Me Alone" (Bonus Track - Available only on the CD and digital download editions)
 
 
 
