--- a/vmax_src/templates/college_drop_out.html
+++ b/vmax_src/templates/college_drop_out.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Encore</title>
+    <title>The College Dropout</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -81,14 +81,10 @@
         </div>
 
         
-        <div class="row">
 
-            <div class="col-md-4">
-                <img src="{% static 'img/albums/albums_large/college_large.jpg' %}" alt="">
-            </div>
+                <img src="{% static 'img/albums/albums_large/college_large.jpg' %}" alt="" align="middle">
 
-            <div class="col-md-4">
-                <h2>Editors' Notes</h2>
+                <h2 align="middle">Editors' Notes</h2>
                 <p>In the early ‘00s, Kanye West gained notoriety as a producer-for-hire before The College Dropout shook hip-hop to its core. The mix of styles and subject matter is breathtaking. Pop hits rub up against vulnerable moments. Street anthems mingle with wild humor. And “Jesus Walks” challenges beliefs like no other rap song before it. In the hands of a lesser artist, The College Dropoout might have ended a career. Kanye West attacks the set with confidence and conviction—a beacon of things to follow.</p>
                 <h3>Track listing</h3>
                 <ol>
@@ -114,9 +110,7 @@
                     <li> "Family Business" </li>
                     <li> "Last Call" </li>
                 </ol>
-            </div>
-
-        </div>
+            </div
         
 
        <hr>
