--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -163,7 +163,7 @@
         <hr>
 
         <!-- Data Row -->
-        <<div class="row">
+        <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Data</h1>
                 <h3 id="-data-format"># Data format</h3>
