--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -172,6 +172,15 @@
                 <h6>Apiary API</h6>
             </div> 
         </div>
+        <!-- Stats Row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Stats</h1>
+                <h5>Total number of commits: 150</h5>
+                <h5>Total number of issues: 30</h5>
+                <h5>Total number of unit tests: 6</h5>
+            </div>
+        </div>
 
         <hr>
 
