--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -103,7 +103,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p align="center">Copyright &copy; TheCodas 2015</p>
+            <p>Copyright &copy; TheCodas 2015</p>
         </div>
     </footer>
 
